# cmake_demo

./: CMakeLists.txt  run_build.bat
app/: CMakeLists.txt
cmake/: AddGitSubmodule.cmake
configured/: CMakeLists.txt  config.hpp.in
src/my_lib/: CMakeLists.txt  my_lib.cc
